tdf#153672 Use RelativeMapMode so text in gdis are scaled/offset correctly

otherwise it overrides the outer GdiMetaFiles efforts to position the
origin and the text is rendered off-canvas in this scenario

Change-Id: If81692dce81fb6f00d5051228e1de13cdcae1770
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148102
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>